--- a/style.css
+++ b/style.css
@@ -1,3 +1,67 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Gentium Basic', serif;
+    color: rgb(119, 36, 129);
+}
+
 body {
     font-family: 'Gentium Basic', serif;
+    color: rgb(119, 36, 129);
+}
+
+.app {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(216, 205, 205);
+}
+
+header h1 {
+    margin: 50px 0 30px 0;
+    text-align: center;
+    font-size: 40px;
+}
+
+header p {
+    font-size: 20px;
+}
+
+.pads {
+    background: rgb(130, 111, 134);
+    width: 100%;
+    display: flex;
+}
+
+.pads > div {
+    height: 100px;
+    width: 100px;
+    flex: 1;
+}
+
+.pad1 {
+    background: #EF476F;
+}
+
+.pad2 {
+    background: #FFD166;
+}
+
+.pad3 {
+    background: #06D6A0;
+}
+
+.pad4 {
+    background: #118AB2;
+}
+
+.pad5 {
+    background: #073B4C;
+}
+
+.pad6 {
+    background: #DD7373;
 }
